# zeroclaw-run-builder

./: .gitignore  Cargo.toml  README.md  push.ps1
.github/workflows/: build.yml  test.yml
openwrt-zeroclaw/luci-app-zeroclaw/htdocs/luci-static/resources/view/zeroclaw/: settings.js
openwrt-zeroclaw/luci-app-zeroclaw/luasrc/model/cbi/: zeroclaw.lua
openwrt-zeroclaw/zeroclaw/: Makefile
openwrt-zeroclaw/zeroclaw/files/: zeroclaw.config  zeroclaw.init
src/: main.rs
zeroclaw-package/luci-app-zeroclaw/: Makefile
zeroclaw-package/luci-app-zeroclaw/luasrc/controller/: zeroclaw.lua
zeroclaw-package/zeroclaw/: Makefile
